Add additional words to spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "Intrinsics",
         "Nieto",
         "Readline",
-        "Uninitializing"
+        "Runspace",
+        "Uninitializing",
+        "Unregistering",
+        "unregistration"
     ]
 }
