--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: .NET Build
-        run: dotnet build -o out
+        run: dotnet build --configuration Release
 
-      - name: Make module
+      - name: Create module
         run: |
           New-Item module -ItemType Directory
           $settings = Import-PowerShellDataFile ./BuildSettings.psd1
