--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,21 @@ jobs:
           New-FileCatalog $config['FilePath'] -CatalogVersion 2
           Set-AuthenticodeSignature @config
 
+      - name: .NET Build
+        run: dotnet build --configuration Release
+
+      - name: Copy signed AnyPackage.dll to release directory
+        run: Copy-Item ./module/AnyPackage.dll ./src/AnyPackage/bin/Release/netstandard2.0
+
+      - name: .NET pack
+        run: dotnet pack --configuration Release
+
+      - name: Upload NuGet package
+        uses: actions/upload-artifact@v3
+        with:
+          name: nupkg
+          path: ./src/AnyPackage/bin/Release/*.nupkg
+
       - name: Upload module
         uses: actions/upload-artifact@v3
         with:
