Add dotnet pack --no-build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -120,7 +120,7 @@ jobs:
         run: Copy-Item ./module/AnyPackage.dll ./src/AnyPackage/bin/Release/netstandard2.0
 
       - name: .NET pack
-        run: dotnet pack --configuration Release
+        run: dotnet pack --configuration Release --no-build
 
       - name: Upload NuGet package
         uses: actions/upload-artifact@v3
