--- a/src/AnyPackage/AnyPackage.csproj
+++ b/src/AnyPackage/AnyPackage.csproj
@@ -13,6 +13,7 @@
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
