--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,19 +84,19 @@ jobs:
       - name: Sign
         uses: signpath/github-action-submit-signing-request@v0.4
         with:
-          api-token: '${{ secrets.SIGNPATH_API_TOKEN }}'
-          organization-id: '${{ vars.SIGNPATH_ORGANIZATION_ID }}'
-          project-slug: 'AnyPackage'
-          signing-policy-slug:  '${{ env.SIGNPATH_SIGNING_POLICY_SLUG }}'
-          github-artifact-id:  "${{steps.upload-unsigned-artifact.outputs.artifact-id}}"
+          api-token: ${{ secrets.SIGNPATH_API_TOKEN }}
+          organization-id: ${{ vars.SIGNPATH_ORGANIZATION_ID }}
+          project-slug: AnyPackage
+          signing-policy-slug:  ${{ env.SIGNPATH_SIGNING_POLICY_SLUG }}
+          github-artifact-id:  ${{ steps.upload-unsigned-artifact.outputs.artifact-id }}
           wait-for-completion: true
-          output-artifact-directory: 'signed-artifact'
+          output-artifact-directory: signed-artifact
 
       - name: Upload signed artifact
         uses: actions/upload-artifact@v4
         with:
-          name: "signed-artifact" 
-          path: "signed-artifact"
+          name: signed-artifact 
+          path: signed-artifact
           if-no-files-found: error
 
   Publish:
