--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,10 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Get Version
+        run: |
+          Write-Host ${{ github.ref_name }}
+
       - name: .NET Build
         run: dotnet pack --output out
 
