Add sign path version parameter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,6 +110,8 @@ jobs:
           github-artifact-id: ${{ needs.Build.outputs.artifact-id }}
           wait-for-completion: true
           output-artifact-directory: signed-artifact
+          parameters: |
+            version: ${{ needs.Build.outputs.version }}
 
       - name: Update module with signed artifact
         run: |
