Convert to json string

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           wait-for-completion: true
           output-artifact-directory: signed-artifact
           parameters: |
-            version: ${{ needs.Build.outputs.version }}
+            version: ${{ toJSON(needs.Build.outputs.version) }}
 
       - name: Update module with signed artifact
         run: |
