--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "Hashtable",
         "Intrinsics",
         "Nieto",
+        "Omni",
         "Readline",
+        "resx",
         "Runspace",
         "Uninitializing",
         "Unregistering",
