--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "Readline",
         "resx",
         "Runspace",
+        "runspaces",
+        "SYSLIB",
         "Uninitializing",
         "Unregistering",
         "unregistration"
