--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,6 +132,12 @@ jobs:
           name: nupkg
           path: ./src/AnyPackage/bin/Release/*.nupkg
 
+      - name: Upload Symbol NuGet package
+        uses: actions/upload-artifact@v4
+        with:
+          name: snupkg
+          path: ./src/AnyPackage/bin/Release/*.snupkg
+
       - name: Upload module
         uses: actions/upload-artifact@v4
         with:
@@ -147,6 +153,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: nupkg
+          path: nupkg
+
+      - name: Download NuGet package
+        uses: actions/download-artifact@v4
+        with:
+          name: snupkg
           path: nupkg
 
       - name: Download module
