--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -124,7 +124,7 @@ jobs:
       - name: Update module with signed artifact
         run: |
           Expand-Archive ./signed-artifact/AnyPackage*.nupkg
-          Copy-Item ./AnyPackage*/lib ./signed-artifact/AnyPackage -Recurse
+          Copy-Item ./AnyPackage*/lib ./signed-artifact/AnyPackage -Force
 
       - name: Upload signed artifact
         uses: actions/upload-artifact@v4
