--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
           Expand-Archive ./out/AnyPackage*.nupkg ./out/package
           $settings = Import-PowerShellDataFile ./BuildSettings.psd1
           Copy-Item @settings
-          Remove-Item ./out/package -Recurse
+          Remove-Item ./out/package -Recurse -Force
 
       - name: Get product version
         id: product-version
